# review-pilot

./: .gitignore  .review-pilot.example.toml  README.md  action.yml  pyproject.toml
.github/workflows/: review-pilot.yml
docs/: feishu.md  git-hooks.md  github-action.md  quickstart.md
examples/final-demo/: README.md
src/review_pilot/: __init__.py  cli.py  code_index.py  command_runner.py  config.py  context_pack.py  context_selector.py  diff_line_map.py  diff_parser.py  diff_reader.py  doctor.py  evidence_guard.py  finding_merger.py  finding_normalizer.py  git_client.py  github_action.py  gitlab_ci.py  hooks.py  language_detection.py  models.py  naive_llm.py  pr_commenter.py  pr_models.py  (+13 more)
tests/: test_builtin_rules.py  test_cli.py  test_cli_exit_codes.py  test_code_index.py  test_command_runner.py  test_config.py  test_context_pack.py  test_context_selector.py  test_diff_line_map.py  test_diff_parser.py  test_diff_reader.py  test_doctor.py  test_evidence_guard.py  test_feishu_notifier.py  test_final_report.py  test_finding_merger.py  test_finding_normalizer.py  test_git_client.py  test_github_action.py  test_github_provider.py  test_gitlab_ci.py  test_gitlab_provider.py  test_hooks.py  test_ignore_patterns.py  test_llm_provider.py  test_llm_reviewer.py  test_llm_schema.py  test_naive_llm.py  test_pr_commenter.py  test_project_detector.py  test_prompt_builder.py  test_report_summary.py  test_report_writer.py  test_review_pipeline.py  test_rule_engine.py  test_semgrep_tool.py  test_simple_checks.py  test_token_budget.py  test_tool_filter.py  test_tool_registry.py  (+1 more)
(+43 files in other folders)
